feat(artifacts): dynamic artifact credentials via kork-credentials (#5135)
* feat(artifacts): kork-credentials for artifacts

* feat(artifacts): remove unused dependencies